Add hero section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="css/style.css">
 	<title>Belaz</title>
 </head>
 <body class="body">
-	
+	<header class="site-header">
+		<div class="container header-container">
+			<a class="logo-link" href="index.html">
+				<img class="logo" src="img/logo.svg" width="191" height="40" alt="Belaz logo">
+			</a>
+
+			<div class="working-time">
+				<p class="working-text">c 9:00 до 21:00</p>
+				<p class="working-text">без выходных</p>
+			</div>
+
+			<div class="header-right">
+				<div class="tel-wrapper">
+					<a class="header-tel" href="tel:+78182474725">+7 (818) 247-47-25</a>
+					<a class="header-tel" href="tel:+78182474725">+7 (818) 247-47-25</a>
+				</div>
+
+				<a class="header-order" href="#">Заказать звонок</a>
+			</div>
+		</div><!-- End of container -->
+	</header><!-- End of header -->
+
+	<div class="hero">
+		<div class="container">
+			<div class="parts">
+				<h1 class="parts-heading">Оригинальные запчасти для Белаз</h1>
+				<p class="parts-text">с бесплатной доставкой  в Ваш город!</p>
+
+				<ul class="parts-list">
+					<li class="parts-item">Дилерские цены - ниже на 20%, работаем без посредников!</li>
+					<li class="parts-item">Срочная бесплатная доставка за 7 дней</li>
+					<li class="parts-item">Даем рассрочку 6 месяцев</li>
+					<li class="parts-item">Даем гарантию  от 12 месяцев</li>
+				</ul>
+			</div><!-- End of parts -->
+		</div>
+	</div><!-- End of hero -->
+
+
 </body>
 </html>
