Add call-back section

--- a/index.html
+++ b/index.html
@@ -37,14 +37,36 @@
 				<p class="parts-text">с бесплатной доставкой  в Ваш город!</p>
 
 				<ul class="parts-list">
-					<li class="parts-item">Дилерские цены - ниже на 20%, работаем без посредников!</li>
-					<li class="parts-item">Срочная бесплатная доставка за 7 дней</li>
-					<li class="parts-item">Даем рассрочку 6 месяцев</li>
-					<li class="parts-item">Даем гарантию  от 12 месяцев</li>
+					<li class="parts-item piggy">Дилерские цены - ниже на 20%,<br> работаем без посредников!</li>
+					<li class="parts-item car">Срочная бесплатная доставка<br> за 7 дней</li>
+					<li class="parts-item calendar">Даем рассрочку<br> 6 месяцев</li>
+					<li class="parts-item medal">Даем гарантию<br> от 12 месяцев</li>
 				</ul>
 			</div><!-- End of parts -->
-		</div>
+		</div><!-- End of container -->
 	</div><!-- End of hero -->
+
+	<div class="call-back">
+		<div class="container call-back-container">
+			<form class="call-back-form" action="https://echo.htmlacademy.ru" method="POST">
+				<h2 class="call-back-heading">Получите прайс прямо сейчас на электронную почту!</h2>
+				<div class="form-inputs">
+					<div class="input-wrapper">
+						<label class="visually-hidden" for="email">Email</label>
+						<input class="call-back-input" placeholder="Введите ваш e-mail" type="email" name="email" id="email">
+					</div>
+					<div class="input-wrapper">
+						<label class="visually-hidden" for="tel">Telefon</label>
+						<input class="call-back-input" placeholder="Введите ваш телефон" type="tel" name="tel" id="tel">
+					</div>
+				</div>
+				<div class="form-button">
+					<p class="button-text">Прайс придет к Вам на почту в течение 5 минут!</p>
+					<button class="call-back-button" type="submit">Получить прайс</button>
+				</div>
+			</form><!-- End of call-back-form -->
+		</div><!-- End of container -->	
+	</div><!-- End of call-back -->
 
 
 </body>
