Add wait section

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 			<form class="call-back-form" action="https://echo.htmlacademy.ru" method="POST">
 				<h2 class="call-back-heading">Получите прайс прямо сейчас на электронную почту!</h2>
 				<div class="form-inputs">
-					<div class="input-wrapper">
+					<div class="input-wrapper input-wrapper-envelope">
 						<label class="visually-hidden" for="email">Email</label>
 						<input class="call-back-input" placeholder="Введите ваш e-mail" type="email" name="email" id="email">
 					</div>
-					<div class="input-wrapper">
+					<div class="input-wrapper input-wrapper-call">
 						<label class="visually-hidden" for="tel">Telefon</label>
 						<input class="call-back-input" placeholder="Введите ваш телефон" type="tel" name="tel" id="tel">
 					</div>
 				</div>
-				<div class="form-button">
+				<div class="form-buttons">
 					<p class="button-text">Прайс придет к Вам на почту в течение 5 минут!</p>
 					<button class="call-back-button" type="submit">Получить прайс</button>
 				</div>
@@ -68,6 +68,32 @@
 		</div><!-- End of container -->	
 	</div><!-- End of call-back -->
 
+	<div class="wait">
+		<div class="container wait-container">
+			<h2 class="wait-heading">Вам не придется ждать!</h2>
+			<p class="wait-text">Любые запчасти для всех моделей Белаз всегда в наличии!</p>
+			<ul class="wait-list">
+				<li class="wait-item">
+					<img class="wait-img" src="img/engine.png" alt="Engine" width="95" height="100">
+					<p class="wait-img-text">Любые типы деталей от шайбы до двигателя!</p>
+				</li>
 
+				<li class="wait-item">
+					<img class="wait-img" src="img/dump-truck.png" alt="Delivery truck" width="100" height="88">
+					<p class="wait-img-text">Все модификации Белаз от 45т до 450 т</p>
+				</li>
+
+				<li class="wait-item">
+					<img class="wait-img" src="img/calendar.png" alt="Calendar" width="100" height="93">
+					<p class="wait-img-text">Отгружаем в день заказа!</p>
+				</li>
+
+				<li class="wait-item">
+					<img class="wait-img" src="img/pinned-map.png" alt="Map" width="95" height="92">
+					<p class="wait-img-text">Доставим в любое место!</p>
+				</li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
