Add manager section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 	<div class="certificate">
 		<div class="container certificate-container">
-			<h1 class="certificate-heading">Мы гарантируем сохранность деталей во время перевозки!</h1>
+			<h2 class="certificate-heading">Мы гарантируем сохранность деталей во время перевозки!</h2>
 			
 			<ul class="certificate-list">
 				<li class="certificate-item">
@@ -144,7 +144,78 @@
 					<a class="certificate-link" href="#">ПОДРОБНЕЕ</a>
 				</li>
 			</ul>
+		</div><!-- End of container -->
+	</div><!-- End of certificate -->
+
+	<div class="bonus">
+		<div class="container bonus-container">
+			<h2 class="bonus-heading">У нас разработаны бонусные системы и скидки для наших клиентов</h2>
+
+			<ul class="bonus-list">
+				<li class="bonus-item bonus-first">Дополнительная скидка 10% на вторую запчасть и любые последующие</li>
+				<li class="bonus-item bonus-second">Скидка 20% при заключении договора на годовое сервисное обслуживание</li>
+				<li class="bonus-item bonus-thrid">Бесплатная доставка по всей России для всех клиентов</li>
+				<li class="bonus-item bonus-four">Бесплатная круглосуточная техническая поддержка</li>
+			</ul>
+		</div><!-- End of container -->
+	</div><!-- End of bonus -->
+
+	<div class="manager">
+		<div class="container manager-container">
+			<h2 class="manager-heading">У Вас остались вопросы?</h2>
+			<p class="manager-text">На Ваши вопросы отвечает Эдуард</p>
+
+			<div class="manager-body">
+				<div class="manager-left">
+					<ol class="manager-list">
+						<li class="manager-item">
+							<a class="manager-link" href="#">Как заказать деталь правильно?</a>
+						</li>
+
+						<li class="manager-item">
+							<a class="manager-link" href="#">Что делать, если запчасть не понадобилась?</a>
+							<div class="message">
+								<div class="text-wrapper">
+									<p class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+									<p class="message-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+								</div>
+								<button class="message-close"><img class="close-img" src="img/close.png" alt="Close" width="11" height="10"></button>
+							</div>
+						</li>
+
+						<li class="manager-item">
+							<a class="manager-link" href="#">Можете ли Вы установить деталь?</a>
+						</li>
+
+						<li class="manager-item">
+							<a class="manager-link" href="#">В чем преимущества оригинальных деталей?</a>
+						</li>
+
+						<li class="manager-item">
+							<a class="manager-link" href="#">В чем преимущества оригинальных деталей?</a>
+						</li>
+					</ol>
+
+					<a class="manager-reload" href="#">Еще вопросы</a>
+				</div>
+
+				<img class="manager-img" src="img/eddie.jpg" alt="Manager" width="570" height="390">
+			</div><!-- End of manager-body -->
+		</div><!-- End of container -->
+	</div><!-- End of manager -->
+
+	<div class="container">
+		<div class="comf">
+			<h2 class="comf-heading">С нами удобно работать!</h2>
+			<p class="comf-text">Более 70% клиентов приходят к нам по рекомендации!</p>
+
+			<ul class="comf-list">
+				<li class="comf-item">Вы вносите предоплату в размере 50% от стоимости запчасти</li>
+				<li class="comf-item">Отправляем запчасти в день заказа</li>
+				<li class="comf-item">Получаете деталь, проверяете, оплачиваете оставшиеся 50%</li>
+			</ul>
 		</div>
-	</div>
+	</div><!-- End of container -->
 </body>
 </html>
