Make web accessibility

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 									<p class="message-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 								</div>
-								<button class="message-close"><img class="close-img" src="img/close.png" alt="Close" width="11" height="10"></button>
+								<button class="message-close" aria-label="Close button"><img class="close-img" src="img/close.png" alt="Close" width="11" height="10" aria-hidden="true"></button>
 							</div>
 						</li>
 
@@ -297,7 +297,7 @@
 				<p class="footer-text">Есть вопросы? Звоните!</p>
 				<a class="footer-tel" href="tel:+7818247-47-25">+7 (818) 247-47-25</a>
 			</div>
-		</div>
-	</footer>
+		</div><!-- End of container -->
+	</footer><!-- End of footer -->
 </body>
 </html>
